[package]
name = "hexegy"
version = "0.1.0"
authors = ["G1gg1L3s <mr.a678i@gmail.com>"]
edition = "2018"
description = "Hex encode or decode files, arguments or stdin to stdout"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
anyhow = "1.0"
